Add cost tracking to article records

--- a/POSVTAV2/cortes_pendientes2.html
+++ b/POSVTAV2/cortes_pendientes2.html
@@ -265,11 +265,11 @@ if (ivaPct > 0 || iepsPct > 0) {
   porDepto[dep].costo += costo;
   porDepto[dep].utilidad += utilidad;
 
-  // 👇 Registro por artículo (opcional)
   const art = det.nombre?.toUpperCase() || "SIN NOMBRE";
-  if (!porArticulo[art]) porArticulo[art] = { cantidad: 0, importe: 0 };
+  if (!porArticulo[art]) porArticulo[art] = { cantidad: 0, importe: 0, costo: 0 };
   porArticulo[art].cantidad += det.cantidad || 0;
   porArticulo[art].importe += ventaSinImpuestos;
+  porArticulo[art].costo += det.costo_total || det.costo_unit * (det.cantidad || 0) || 0;
 }
 
 
