--- a/POSVTAV2/cortes_copycopy.html
+++ b/POSVTAV2/cortes_copycopy.html
@@ -591,8 +591,11 @@ try {
     const markers = puntos
       .map(p => `markers=color:red%7Clabel:${p.folio?.slice(-2)}%7C${p.lat},${p.lon}`)
       .join("&");
+const path = `path=color:blue|weight:3|${puntos.map(p => `${p.lat},${p.lon}`).join("|")}`;
 
-    const mapUrl = `https://maps.googleapis.com/maps/api/staticmap?center=${latC},${lonC}&zoom=14&size=600x400&maptype=roadmap&${markers}&key=AIzaSyDj-feD_jhqKIKgZLHZ9xpejG5Nx4UiiSE;
+    
+    const mapUrl = `https://maps.googleapis.com/maps/api/staticmap?center=${latC},${lonC}&zoom=14&size=600x400&maptype=roadmap&${markers}&${path}&key=AIzaSyDj-feD_jhqKIKgZLHZ9xpejG5Nx4UiiSE`;
+
 
     // Cargar imagen del mapa
     const img = await fetch(mapUrl)
