--- a/POSVTAV2/cortes_pendientes2.html
+++ b/POSVTAV2/cortes_pendientes2.html
@@ -287,9 +287,9 @@ porNota.push({
   hora,
   total: totalVenta,
   costo: costoVenta,
-  utilidad: utilidadVentaRecalc
+  utilidad: utilidadVentaRecalc,
+  ubicacion: v.ubicacion || null
 });
-
   }
 
   const resumen = {
