Optimize map generation and add error handling

--- a/POSVTAV2/cortes_pendientes2.html
+++ b/POSVTAV2/cortes_pendientes2.html
@@ -571,7 +571,7 @@ if (topArticulos.length === 0) {
 }
 
 // =============================
-// 🗺️ PAGINA 5: MAPA DE TRAZABILIDAD (OPTIMIZADO Y CON LEYENDA)
+// 🗺️ PAGINA 5: MAPA DE TRAZABILIDAD (ROBUSTO Y CON LEYENDA)
 // =============================
 try {
   const puntos = (r.porNota || [])
@@ -593,37 +593,47 @@ try {
       .join("&");
     const path = `path=color:0x0000ff|weight:3|${puntos.map(p => `${p.lat},${p.lon}`).join("|")}`;
 
-    // 🧠 mapa en alta resolución y con espera
     const mapUrl = `https://maps.googleapis.com/maps/api/staticmap?center=${latC},${lonC}&zoom=13&scale=2&size=640x480&maptype=roadmap&${markers}&${path}&key=AIzaSyDj-feD_jhqKIKgZLHZ9xpejG5Nx4UiiSE`;
 
+    console.log("MAP URL:", mapUrl);
     overlayText.innerText = "🗺️ Cargando mapa de trazabilidad...";
 
-    const response = await fetch(mapUrl);
+    const controller = new AbortController();
+    const timeout = setTimeout(() => controller.abort(), 8000); // máximo 8 seg
+    const response = await fetch(mapUrl, { signal: controller.signal });
+    clearTimeout(timeout);
+
     const blob = await response.blob();
-    const img = await new Promise((resolve) => {
-      const reader = new FileReader();
-      reader.onload = () => resolve(reader.result);
-      reader.readAsDataURL(blob);
-    });
+    if (blob.type.startsWith("image/")) {
+      const img = await new Promise((resolve) => {
+        const reader = new FileReader();
+        reader.onload = () => resolve(reader.result);
+        reader.readAsDataURL(blob);
+      });
 
-    pdf.addPage();
-    pdf.setFont("helvetica", "bold");
-    pdf.setFontSize(14);
-    pdf.text("MAPA DE TRAZABILIDAD DE VENTAS", 45, 15);
-    pdf.addImage(img, "JPEG", 10, 25, 190, 120);
+      pdf.addPage();
+      pdf.setFont("helvetica", "bold");
+      pdf.setFontSize(14);
+      pdf.text("MAPA DE TRAZABILIDAD DE VENTAS", 45, 15);
+      pdf.addImage(img, "JPEG", 10, 25, 190, 120);
 
-    // leyenda con clientes o folios
-    pdf.setFontSize(9);
-    let yLeyenda = 155;
-    for (const p of puntos.slice(0, 10)) { // máximo 10 líneas
-      pdf.text(`${p.folio.padEnd(8)}  ${p.direccion.substring(0, 60)}`, 15, yLeyenda);
-      yLeyenda += 5;
+      pdf.setFontSize(9);
+      let yLeyenda = 155;
+      for (const p of puntos.slice(0, 10)) {
+        pdf.text(`${p.folio.padEnd(8)} ${p.direccion.substring(0, 60)}`, 15, yLeyenda);
+        yLeyenda += 5;
+      }
+
+      pdf.setFontSize(10);
+      pdf.text(`Puntos totales: ${puntos.length}`, 15, yLeyenda + 5);
+      pdf.text(`Centro: ${latC.toFixed(4)}, ${lonC.toFixed(4)}`, 15, yLeyenda + 10);
+      pdf.text("Cada punto representa una venta registrada con ubicación GPS.", 15, yLeyenda + 15);
+    } else {
+      pdf.addPage();
+      pdf.setFont("helvetica", "italic");
+      pdf.setFontSize(12);
+      pdf.text("⚠️ Error al cargar el mapa desde Google (ver consola).", 20, 50);
     }
-
-    pdf.setFontSize(10);
-    pdf.text(`Puntos totales: ${puntos.length}`, 15, yLeyenda + 5);
-    pdf.text(`Centro: ${latC.toFixed(4)}, ${lonC.toFixed(4)}`, 15, yLeyenda + 10);
-    pdf.text("Cada punto representa una venta registrada con ubicación GPS.", 15, yLeyenda + 15);
   } else {
     pdf.addPage();
     pdf.setFont("helvetica", "italic");
@@ -632,7 +642,12 @@ try {
   }
 } catch (err) {
   console.error("Error generando mapa:", err);
+  pdf.addPage();
+  pdf.setFont("helvetica", "italic");
+  pdf.setFontSize(12);
+  pdf.text("⚠️ No se pudo generar el mapa de trazabilidad.", 20, 50);
 }
+
   
   // =============================
   // 💾 Exportar y enviar
